--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPgENNe/aIIhvW/EqQR656J",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Mvryo02/Plane-anomaly-detection-/blob/main/Untitled1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Import"
-      ],
       "metadata": {
         "id": "YMngttNus_Oq"
-      }
+      },
+      "source": [
+        "Import"
+      ]
     },
     {
       "cell_type": "code",
@@ -56,9 +39,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Mvryo02/Plane-anomaly-detection-"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,11 +47,10 @@
         "id": "NPYpFKCptHxJ",
         "outputId": "0efc3976-18fd-463f-d571-246688d93d11"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'Plane-anomaly-detection-'...\n",
             "remote: Enumerating objects: 558, done.\u001b[K\n",
@@ -82,42 +62,27 @@
             "Updating files: 100% (1118/1118), done.\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "cd Plane-anomaly-detection-/"
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SQFL53u-Wua_",
-        "outputId": "491b6c14-f719-43d4-a484-09d03ed20368"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/Plane-anomaly-detection-\n"
-          ]
-        }
+      "source": [
+        "!git clone https://github.com/Mvryo02/Plane-anomaly-detection-"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "trasform definition"
-      ],
       "metadata": {
         "id": "FW40Q31itG9E"
-      }
+      },
+      "source": [
+        "trasform definition"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "RfN8hqPhtWl4"
+      },
+      "outputs": [],
       "source": [
         "transform = transforms.Compose([\n",
         "    transforms.RandomHorizontalFlip(p=0.5),  # Flip orizzontale casuale\n",
@@ -126,31 +91,20 @@
         "    transforms.ToTensor(),                    # Converte l'immagine in tensor\n",
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Normalizza l'immagine\n",
         "])"
-      ],
-      "metadata": {
-        "id": "RfN8hqPhtWl4"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Dataset loading"
-      ],
       "metadata": {
         "id": "Cq_TZNcISMU1"
-      }
+      },
+      "source": [
+        "Dataset loading"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.chdir('/content/Plane-anomaly-detection-')\n",
-        "dataset = datasets.ImageFolder(root='train', transform=transform)\n",
-        "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
-        "num_elements = len(dataset)\n",
-        "print(f\"Numero di immagini nel dataset: {num_elements}\")"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -158,22 +112,26 @@
         "id": "x1ail4dwSQRQ",
         "outputId": "bb5cc3ec-cd53-4580-e590-b8d4158133c4"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Numero di immagini nel dataset: 553\n"
           ]
         }
+      ],
+      "source": [
+        "os.chdir('/content/Plane-anomaly-detection-')\n",
+        "dataset = datasets.ImageFolder(root='train', transform=transform)\n",
+        "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n",
+        "num_elements = len(dataset)\n",
+        "print(f\"Numero di immagini nel dataset: {num_elements}\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git status"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,11 +139,10 @@
         "id": "Xe1pH485WUTD",
         "outputId": "19cc6677-272b-43be-db16-73c728dbf257"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "On branch main\n",
             "Your branch is up to date with 'origin/main'.\n",
@@ -193,13 +150,14 @@
             "nothing to commit, working tree clean\n"
           ]
         }
+      ],
+      "source": [
+        "!git status"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git  add Untitled1.ipynb"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -207,22 +165,14 @@
         "id": "CpqJ0GacW06_",
         "outputId": "94f7b920-60d9-4a24-e83f-ee1ee689e5b4"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: pathspec 'Untitled1.ipynb' did not match any files\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "!git  add Untitled1.ipynb"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!cp content/Utitled1.ipynb content/Plane-anomaly-detection-/"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -230,39 +180,56 @@
         "id": "aT0AJH88YopT",
         "outputId": "fbb865b0-b7be-447e-e498-7ab259f10cc4"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "cp: cannot stat 'content/Utitled1.ipynb': No such file or directory\n"
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "nothing to commit, working tree clean\n"
           ]
         }
+      ],
+      "source": [
+        "!git commit -m \"test\""
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls /content/"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DNmLekODZwqv",
-        "outputId": "e2a33a02-5ea5-4da9-b406-164c45289276"
-      },
-      "execution_count": 19,
+      "execution_count": 5,
+      "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Plane-anomaly-detection-  sample_data\n"
+            "remote: Permission to Mvryo02/Plane-anomaly-detection-.git denied to Maryo02.\n",
+            "fatal: unable to access 'https://github.com/Mvryo02/Plane-anomaly-detection-.git/': The requested URL returned error: 403\n"
           ]
         }
+      ],
+      "source": [
+        "!git push origin main"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPgENNe/aIIhvW/EqQR656J",
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
